--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -4,25 +4,24 @@
 NAME = push_swap
 CC = gcc
 CFLAGS = -Wall -Werror -Wextra
-ARCHIVE = push_swap.a
-MAKE_LIB = ar -rcs
+EXEC = push_swap.a
 
 SRCS = $(wildcard *.c)
 OBJS = $(SRCS:.c=.o)
 
 all : $(NAME)
 
-$(NAME) : $(ARCHIVE)
+$(NAME) : $(EXEC)
 	$(CC) $< -o $@
 
-$(ARCHIVE) : $(OBJS)
-	$(MAKE_LIB) $(ARCHIVE) $^
+$(EXEC) : $(OBJS)
+	 ar -rcs $(EXEC) $^
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean : 
-	rm -f $(OBJS) $(ARCHIVE)
+	rm -f $(OBJS) $(EXEC)
 
 fclean : clean
 	rm -f $(NAME)
